# gxy-tool-bot

./: --test_output_json  .gitignore  DEVELOPMENT.md  PLAN.md  README.md  pyproject.toml  review.md
examples/: issue-template-tool-request.yml
gxy_tool_bot/: __init__.py  address_feedback.py  agent_loop.py  api_client.py  cli.py  config.py  exemplars.py  generator.py  github_client.py  planemo_utils.py  planner.py  retry.py  site.py  validation.py
gxy_tool_bot/lookups/: __init__.py  bioconda.py  biotools.py  doi.py  fetch.py  github.py  pubmed.py  toolshed.py  web.py
gxy_tool_bot/templates/: _conventions.txt  feedback_system.txt  generator_system.txt  generator_user.txt  planner_system.txt  planner_user.txt
tests/: test_address_feedback.py  test_agent_loop.py  test_api_client.py  test_config.py  test_fetch.py  test_generator.py  test_planner.py  test_retry.py  test_site.py  test_toolshed.py
workflows/: deploy-site.yml  on-pr-feedback.yml  on-ready-to-implement.yml  on-tool-request.yml
