[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gxy-tool-bot"
version = "0.1.0"
description = "Agentic bot that generates Galaxy tool wrappers from user requests"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "gxy-tool-bot contributors" }]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "click>=8.1",
    "jinja2>=3.1",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
gxy-tool-bot = "gxy_tool_bot.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["gxy_tool_bot"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
